infra-k8s/argo-workflows/install/set-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  selector:
    matchLabels:
      app: argo-server
  template:
    spec:
      containers:
        - name: argo-server
          args:
            - server
            - "--secure=false"
