infra-k8s/argo-workflows/install/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflow-ingress
spec:
  rules:
  - http:
      paths:
      - path: /argo-workflow
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              name: web
